(further improvement) 7903116: Accumulate and log test run times statistics - making code compilable with JDK8